1.0.0			19.03.2022			Initial release
									Update CHANGELOG
									Change version number to 1.0.0
2.0.0			22.03.2022			Remove "Status" from "RAK3172_Transmit"
									Add key handling for ABP mode
									Add functions to read the RSSI and SNR value of the last packet
									Add P2P mode
									Code refractoring
									Update documentation
									Update CHANGELOG
									Change version number to 2.0.0
3.0.0			22.05.2022			Fix missing path in CMakeLists.txt
									Replace Arduino code with esp-idf
									Add option to enable / disable LoRaWAN or P2P mode
									Add ADR support to LoRaWAN driver
									Add power down options in LoRaWAN mode
									Code refractoring
									Update documentation
									Update CHANGELOG
									Change version number to 3.0.0
3.1.0								Add support for RUI3 based firmware
									Add option for UART to support ESP32 power management modes
									Fix error in splash screen handling in function "RAK3172_SetMode"
									Add option to enable / disable a hardware reset
									Add support for core affinity
									Rename error codes
									Clean up Kconfig
									Code optimizations
									Update CHANGELOG
									Change version number to 3.1.0