@@ -7,12 +7,11 @@
 
 #include "rak3172.h"
 
-static RAK3172_t _Device = {
-    .Interface = (uart_port_t)CONFIG_RAK3172_UART,
-    .Rx = (gpio_num_t)CONFIG_RAK3172_RX,
-    .Tx = (gpio_num_t)CONFIG_RAK3172_TX,
-    .Baudrate = (RAK3172_Baud_t)CONFIG_RAK3172_BAUD,
-};
+#ifdef CONFIG_RAK3172_RESET_USE_HW
+    static RAK3172_t _Device = RAK3172_DEFAULT_CONFIG(CONFIG_RAK3172_UART_PORT, CONFIG_RAK3172_UART_RX, CONFIG_RAK3172_UART_TX, CONFIG_RAK3172_UART_BAUD, CONFIG_RAK3172_RESET_PIN, false);
+#else
+    static RAK3172_t _Device = RAK3172_DEFAULT_CONFIG(CONFIG_RAK3172_UART_PORT, CONFIG_RAK3172_UART_RX, CONFIG_RAK3172_UART_TX, CONFIG_RAK3172_UART_BAUD);
+#endif
 
 static QueueHandle_t _ListenQueue;
 
